# DIALOC

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: transcript_lok_policy.example.json
docs/: OOD_DEPLOYMENT.md  RELEASE_CHECKLIST.md  RESEARCH.md
scripts/: benchmark.py  doctor.py  download_models.py  real_llm_smoke.py  smoke_transcribe.py
src/transcript_lok/: __init__.py  asr.py  audio.py  diagnostics.py  diarization.py  glossary.py  llama_cpp.py  llm.py  models.py  policy.py  sessions.py  ui.py
tests/: test_llama_cpp.py  test_llm_workflows.py  test_models.py  test_policy.py  test_real_gemma_llm.py  test_ui_progress.py  test_workflow_features.py
tests/fixtures/: llm_typo_transcript.json
